# iil-adrfw

./: .gitignore  AGENT_HANDOVER.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SCHEMA_V3_CHANGELOG.md  SCHEMA_V3_SPEC.md  SCHEMA_V4_SPEC.md  SPRINT_PLAN.md  constraints.txt  pyproject.toml  validate_example.py  validate_schemas.py
.github/workflows/: ci.yml  publish.yml
.windsurf/rules/: project-facts.md
docs/: ADR_SHADOW_PR_DEFERRED.md  CASCADE_PIPELINE.md
examples/: ADR-188-unified-vector-store.md  ADR-9088-hypothetical-v10.md  ADR-9088-hypothetical-v10.rules.yaml  conftest.py  test_e2e.py  test_e2e_cli.py  test_e2e_cli_findings.py  test_e2e_cli_inprocess.py  test_e2e_cross_repo.py  test_e2e_diff.py  test_e2e_freshness.py  test_e2e_index.py  test_e2e_logic_fixes.py  test_e2e_metrics.py  test_e2e_narrate.py  test_e2e_propose.py  test_e2e_query_audit.py  test_e2e_regression.py  test_e2e_schema_v3.py  test_e2e_security_paths.py  test_e2e_server_naive_datetime.py  test_e2e_server_path_containment.py  test_e2e_staleness_consolidated.py  test_e2e_v11.py
examples/_test_adrs_regression/: ADR-410-legacy-hyphens.md  ADR-411-freetext-supersedes.md  ADR-420-dangling.md  ADR-430-self-ref.md
examples/_test_adrs_v11/: ADR-099-multi-tenancy.md  ADR-188-unified-vector-store.rules.yaml
examples/_test_adrs_v3/: ADR-580.md
examples/_test_diff_right/: ADR-099-multi-tenancy.md  ADR-099-multi-tenancy.rules.yaml
examples/django_polyrepo/apps/billing/: models.py
examples/polyrepo_workspace/bfagent/apps/stories/: models.py
examples/polyrepo_workspace/mcp-hub/rag_mcp/db/: schema.sql
examples/polyrepo_workspace/meiki-hub/apps/cases/: models.py
schemas/: adr_frontmatter.schema.json  constitution.schema.json
src/iil_adrfw/: __init__.py  cli.py  server.py
src/iil_adrfw/audit/: __init__.py
src/iil_adrfw/checkers/: __init__.py  python_ast.py
src/iil_adrfw/cross_repo/: __init__.py
src/iil_adrfw/diff/: __init__.py
src/iil_adrfw/domain/: __init__.py  cross_repo.py
src/iil_adrfw/freshness/: __init__.py
src/iil_adrfw/graph/: __init__.py
src/iil_adrfw/index/: __init__.py
src/iil_adrfw/metrics/: __init__.py
src/iil_adrfw/narrate/: __init__.py
src/iil_adrfw/persistence/: __init__.py
src/iil_adrfw/propose/: __init__.py
src/iil_adrfw/schemas/: __init__.py  adr_frontmatter.schema.json  adr_rules.schema.json
