[project]
name = "iil-adrfw"
version = "0.6.0"
description = "Architectural Decision Record framework with bi-temporal validity, AST checkers, and FastMCP integration"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Achim Dehnert", email = "achim@iil.gmbh" }]
dependencies = [
    "fastmcp>=3.0",
    "libcst>=1.5",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "jsonschema>=4.23",
    "referencing>=0.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.11",
]

[project.scripts]
iil-adrfw = "iil_adrfw.cli:main"
iil-adrfw-mcp = "iil_adrfw.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/achimdehnert/iil-adrfw"
Repository = "https://github.com/achimdehnert/iil-adrfw"

[tool.hatch.build.targets.wheel]
packages = ["src/iil_adrfw"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
