[project]
name = "iil-adrfw"
version = "0.7.0"
description = "Architectural Decision Record framework with bi-temporal validity, AST checkers, and FastMCP integration"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Achim Dehnert", email = "achim@iil.gmbh" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "fastmcp>=3.0",
    "libcst>=1.5",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "jsonschema>=4.23",
    "referencing>=0.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
]

[project.scripts]
iil-adrfw = "iil_adrfw.cli:main"
iil-adrfw-mcp = "iil_adrfw.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/achimdehnert/iil-adrfw"
Repository = "https://github.com/achimdehnert/iil-adrfw"

[tool.hatch.build.targets.wheel]
packages = ["src/iil_adrfw"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E501: line-length handled by formatter, not enforced.
# UP042: StrEnum migration is an opinionated, behavior-sensitive style choice —
#        the codebase deliberately uses (str, Enum); not enforced.
ignore = ["E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
# __init__.py modules re-export public API; unused-import (F401) is by design.
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["examples"]
# Coverage gate ratchets up as coverage improves; never lower it silently.
# 55->70 after in-process cli.py tests (#20); 70->80 after metrics/index/
# freshness module tests took actual coverage ~74% -> ~82.5%. Floor kept a
# few points below actual to absorb pytest-randomly reordering effects.
addopts = "--cov=iil_adrfw --cov-report=term-missing --cov-fail-under=80"
# ADR-057 test naming convention (test_should_<expected_behavior>), enforced
# via iil-testkit. All examples/*.py tests were renamed to conform (#26);
# "error" hard-fails collection on any future regression instead of warning.
iil_naming_mode = "error"

[tool.coverage.run]
source = ["iil_adrfw"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
# Error-free and gated in CI (`types` job runs `make types`). Keep it at zero.
# `ignore_missing_imports` clears third-party stub noise so real issues surface.
# `disallow_untyped_defs` requires every function to carry a signature so new
# untyped code can't slip in under the zero-error gate.
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
